--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "ramda": "^0.25.0"
   }
 }
